hopefully fixing background size on mobile devices

--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ body{
 }
 #image1{
     size: 20px;
-    
     border-radius: 8px;
     max-width: 100%;
-  height: auto;
+     height: auto;
+     position: relative;
+     background-position: center;
+     background-repeat: no-repeat; background-size: cover;
 }
 img{
     display: block;
